--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,8 +12,8 @@ html, body {
       opacity: 0.8; }
     html #appWrapper .mainContent, body #appWrapper .mainContent {
       position: absolute;
-      top: 50vh;
-      left: 40vw;
+      top: 0;
+      left: 0;
       text-align: center;
       font-family: Helvetica; }
       html #appWrapper .mainContent h1, body #appWrapper .mainContent h1 {
