--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -21,8 +21,8 @@ html, body {
 
 		.mainContent {
 			position: absolute;
-			top: 50vh;
-			left: 40vw;
+			top: 0;
+			left: 0;
 			text-align: center;
 		    font-family: Helvetica;
 
