--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,11 +1,11 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:900");
 html, body {
   margin: 0; }
   html .overlay, body .overlay {
     height: 100%;
     width: 100%;
     background: #3a3a3a;
-    opacity: 0.8;
+    opacity: 0.9;
     position: absolute;
     z-index: 1; }
   html #appWrapper, body #appWrapper {
@@ -22,16 +22,50 @@ html, body {
       z-index: 2;
       width: 100%;
       color: #ffffff; }
+      html #appWrapper .mainContent img.logo, body #appWrapper .mainContent img.logo {
+        width: 150px; }
       html #appWrapper .mainContent h1, body #appWrapper .mainContent h1 {
         text-transform: uppercase;
         font-family: 'Montserrat', sans-serif;
         font-weight: 900;
+        font-size: 52px;
         font-style: normal; }
+      html #appWrapper .mainContent p.subtext, body #appWrapper .mainContent p.subtext {
+        font-size: 12px; }
       html #appWrapper .mainContent .DOBDropdown, body #appWrapper .mainContent .DOBDropdown {
         margin: 25px 0; }
+      html #appWrapper .mainContent .monthSelect,
+      html #appWrapper .mainContent .daySelect,
+      html #appWrapper .mainContent .yearSelect, body #appWrapper .mainContent .monthSelect,
+      body #appWrapper .mainContent .daySelect,
+      body #appWrapper .mainContent .yearSelect {
+        width: 175px;
+        display: inline-block; }
+        html #appWrapper .mainContent .monthSelect select,
+        html #appWrapper .mainContent .daySelect select,
+        html #appWrapper .mainContent .yearSelect select, body #appWrapper .mainContent .monthSelect select,
+        body #appWrapper .mainContent .daySelect select,
+        body #appWrapper .mainContent .yearSelect select {
+          color: #8e8e8e;
+          width: 100%;
+          height: 30px;
+          margin: 8px 0;
+          border: 0;
+          border: 1px solid black;
+          background: #fff url("../images/carat.png") no-repeat;
+          background-size: 12px;
+          background-position: right 15px center;
+          font-family: 'Arial';
+          padding-left: 24px;
+          -webkit-appearance: none;
+          -moz-appearance: none;
+          -webkit-border-radius: 25px;
+          -moz-border-radius: 25px;
+          border-radius: 25px; }
       html #appWrapper .mainContent #enter-btn, body #appWrapper .mainContent #enter-btn {
         background: #009941;
         border: none;
+        border-radius: 4px;
         color: #ffffff;
         text-transform: uppercase;
         font-weight: 900;
