--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
-
-$gray: #3a3a3a;
-$white: #ffffff;
-$red: #ff1d00;
-$green: #00ff00;
+@import url('https://fonts.googleapis.com/css?family=Montserrat:900');
+$lightGray: #8e8e8e;
+$gray: 		#3a3a3a;
+$white: 	#ffffff;
+$red: 		#ff1d00;
+$green: 	#00ff00;
 $darkGreen: #009941;
 
 html, body {
@@ -13,7 +13,7 @@ html, body {
 		height:100%;
 		width: 100%;
 		background: $gray;
-		opacity: 0.8;
+		opacity: 0.9;
 		position: absolute;
 		z-index: 1;
 	}
@@ -34,20 +34,54 @@ html, body {
 		    width: 100%;
 			color: $white;
 
+			img.logo {
+				width: 150px;
+			}
+
 			h1 {
 				text-transform: uppercase;
 				font-family: 'Montserrat', sans-serif;
 				font-weight: 900;
+				font-size: 52px;
 				font-style: normal;
 			}
+
+			p.subtext { font-size: 12px; }
 
 			.DOBDropdown {
 				margin: 25px 0;
 			}
 
+			.monthSelect,
+			.daySelect,
+			.yearSelect {
+				width: 175px;
+				display: inline-block;
+
+				select {
+					color: $lightGray;
+					width: 100%;
+					height: 30px;
+					margin: 8px 0;
+					border: 0;
+					border: 1px solid black;
+					background: #fff url('../images/carat.png') no-repeat;
+					background-size: 12px;
+					background-position:  right 15px center;
+					font-family: 'Arial';
+					padding-left: 24px;
+					-webkit-appearance: none;
+					-moz-appearance: none;
+					-webkit-border-radius: 25px;
+					-moz-border-radius: 25px;
+					border-radius: 25px;
+				}
+			}
+
 			#enter-btn {
 				background: $darkGreen;
 				border: none;
+				border-radius: 4px;
 				color: $white;
 				text-transform: uppercase;
 				font-weight: 900;
