--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -6,6 +6,7 @@ $red: 		#ff1d00;
 $green: 	#00ff00;
 $darkGreen: #009941;
 
+
 html, body {
 	margin: 0;
 
@@ -42,7 +43,7 @@ html, body {
 				text-transform: uppercase;
 				font-family: 'Montserrat', sans-serif;
 				font-weight: 900;
-				font-size: 52px;
+				font-size: 36px;
 				font-style: normal;
 			}
 
@@ -56,13 +57,15 @@ html, body {
 			.daySelect,
 			.yearSelect {
 				width: 175px;
-				display: inline-block;
+				display: block;
+				margin: 0 auto;
+
 
 				select {
 					color: $lightGray;
 					width: 100%;
 					height: 30px;
-					margin: 8px 0;
+					margin: 5px 0;
 					border: 0;
 					border: 1px solid black;
 					background: #fff url('../images/carat.png') no-repeat;
@@ -110,5 +113,28 @@ html, body {
 			}
 		}
 
+	}
+}
+
+
+@media screen and (min-width: 768px) {
+	html, body {
+		#appWrapper {
+			.mainContent {
+				h1 {
+					font-size: 52px;
+				}
+				.monthSelect,
+				.daySelect,
+				.yearSelect {
+					display: inline-block;
+					margin: 0 3px;
+
+					select {
+						margin: 8px 0;
+					}
+				}
+			}
+		}
 	}
 }
