--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -78,6 +78,10 @@ html, body {
 				}
 			}
 
+			.rememberCheckbox {
+				margin-bottom: 20px;
+			}
+
 			#enter-btn {
 				background: $darkGreen;
 				border: none;
